# qrize

./: LICENSE  Makefile  README.md  hello.py  pyproject.toml
src/: app.py  qrize.py
src/qrize/cli/: root.py
src/qrize/cli/commands/: pdf.py
src/qrize/core/: fs.py  log.py  pdf.py  qr.py  types.py  utils.py  validators.py
tests/: data.json  list.json  modules.json  schema.json
